e2e/ubuntu.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  namespace: default
  name: ubuntu
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: ubuntu
rules:
  - apiGroups:
      - ""
    resources:
      - pods
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - cilium.io
    resources:
      - ciliumendpoints
    verbs:
      - get
      - list
      - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: ubuntu
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ubuntu
subjects:
  - kind: ServiceAccount
    namespace: default
    name: ubuntu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      serviceAccountName: ubuntu
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: ubuntu
          args:
            - pause
          image: ghcr.io/cybozu/ubuntu-debug:22.04
